[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "apiprober"
version = "0.1.0"
description = "Passive API discovery and documentation CLI for undocumented REST services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Lukas Geiger", email = "lukisch@users.noreply.github.com"},
]
keywords = ["api", "api-discovery", "rest-api", "openapi", "documentation", "passive-reconnaissance", "sqlite", "zero-dependency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/dev-bricks/apiprober"
Repository = "https://github.com/dev-bricks/apiprober"
Issues = "https://github.com/dev-bricks/apiprober/issues"

[project.scripts]
apiprober = "ApiProber.api_prober:main"

[tool.setuptools]
package-dir = {"ApiProber" = "."}
packages = [
    "ApiProber",
    "ApiProber.core",
    "ApiProber.discovery",
    "ApiProber.export",
]

[tool.setuptools.package-data]
ApiProber = [
    "config.json",
    "*.ico",
    "wordlists/*.txt",
]
